Add new listing creation functionality and fix show listing details

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -9,8 +9,8 @@
     <h2>Listing Details</h2>
     <ul>
         <li><%=listing.title%></li>
-        <li><%=listing.descripition%></li>
-        <li><%=listing.price%></li>
+        <li><%=listing.description%></li>
+        <li>&#8360; <%=listing.price.toLocaleString('en-PK')%></li>
         <li><%=listing.location%></li>
         <li><%=listing.country%></li>
     </ul>
