--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h3>All Listings</h3>
+    <form method="GET" action="/listings/new">
+        <button>Create New</button>
+    </form>
+    
     <ul>
         <%for(let listing of allListings) {%>
             <a href="/listings/<%= listing._id %>"> <li><%= listing.title %></li> </a>
