Add edit functionality for listings with new edit route and template

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderlust</title>
-    <style>
+   <style>
         form{
-            height: 100px;
+            height: 240px;
             width: 200px;
-            line-height: 30px;
+            border: 2px solid black;
+            line-height: 32px;
+            text-align: center;
         }
     </style>
 </head>
