Add delete functionality for listings with delete route and button in show.ejs

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,5 +15,8 @@
         <li><%=listing.country%></li>
     </ul>
     <a href="/listings/<%=listing._id%>/edit">Edit listing</a>
+    <form method="POST" action="/listings/<%= listing._id%>?_method=DELETE">
+        <button>Delete Listing</button>
+    </form>
 </body>
 </html>
