--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -11,6 +11,8 @@
             border: 2px solid black;
             line-height: 32px;
             text-align: center;
+            border-radius: 10px;
+            padding:10px 5px ;
         }
     </style>
 </head>
