--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
+<% layout('layouts/boilerplate')  -%>
 <body>
     <h2>Listing Details</h2>
     <ul>
@@ -19,4 +13,4 @@
         <button>Delete Listing</button>
     </form>
 </body>
-</html>
+
