--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,3 +14,33 @@
 .nav-link {
     color: #222222 !important;
 }
+
+/* footer */
+.f-info-links, .f-info-socials{
+    width: 100%;
+}
+
+.f-info-links a {
+    text-decoration: none;
+    color: #222222 !important;
+}
+
+.f-info-links a:hover {
+    text-decoration: underline;
+}
+
+.f-info-socials i{
+    margin-right: 1rem;
+    font-size: 1.2rem;
+}
+
+.f-info{
+    text-align: center;
+    height: 8rem;
+    display: flex;
+    background-color: #ebebeb;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: space-evenly;
+
+}
