--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,7 +4,7 @@
     <!-- <form method="GET" action="/listings/new">
         <button>Create New</button>
     </form> -->
-   <div class="row">
+   <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <%for(let listing of allListings) {%>
             <div class="card" style="width: 20rem;">
                 <img src="<%=listing.image.url%>" class="card-img-top" alt="...">
