--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
-/* body{
-    background-color: azure;
-} */
+body{
+    font-family: "Plus Jakarta Sans", sans-serif !important;
+}
 
 /* Navbar */
 .navbar {
@@ -56,4 +56,18 @@
 
 .card-img-top {
     border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+}
+
+.card-body {
+    padding: 0 !important;
+}
+
+.card-text{
+    font-weight: 400 !important;
+}
+
+.listing-link {
+    
 }
