--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,16 +6,17 @@
     </form> -->
    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <%for(let listing of allListings) {%>
-            <div class="card" style="width: 20rem;">
-                <img src="<%=listing.image.url%>" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">
-                        <%= listing.title %> <br>
-                        &#8360; <%= listing.price.toLocaleString('en-PK') %> /night <br>
-
-                    </p>
+            <a href="/listings/<%= listing._id%>" class="listing-link">
+                <div class="card col">
+                    <img src="<%=listing.image.url%>" class="card-img-top" alt="..." style="height:20rem">
+                    <div class="card-body">
+                        <p class="card-text">
+                        <b> <%= listing.title %> </b> <br>
+                            &#8360; <%= listing.price.toLocaleString('en-PK') %> /night <br>
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </a>
         <%}%>
    </div>
 </body>
