--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -9,6 +9,7 @@
             <a href="/listings/<%= listing._id%>" class="listing-link">
                 <div class="card col">
                     <img src="<%=listing.image.url%>" class="card-img-top" alt="..." style="height:20rem">
+                    <div class="card-img-overlay">ABCD </div>
                     <div class="card-body">
                         <p class="card-text">
                         <b> <%= listing.title %> </b> <br>
