--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,19 +1,46 @@
 <% layout('layouts/boilerplate')  -%>
 <body>
-    <h3>Create New Listing</h3>
-    <form method="POST" action="/listings">
-        <input type="text" placeholder="add title..." name="listing[title]">
-        <br><br>
-        <textarea name="listing[description]" placeholder="add description..."></textarea>
-        <br><br>
-        <input type="text" placeholder="enter img/url..." name="listing[image]">
-        <br><br>
-        <input type="text" placeholder="add price..." name="listing[price]">
-        <br><br>    
-        <input type="text" placeholder="add location..." name="listing[location]">
-        <br><br>
-        <input type="text" placeholder="add country..." name="listing[country]">
-        <br><br>
-        <button>Add</button>
-    </form>
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+            <h3>Create New Listing</h3>
+            <form method="POST" action="/listings">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" placeholder="add title..." name="listing[title]" class="form-control">
+                </div>
+
+                <div class="mb-3">
+                    <label for="title" class="form-label">Description</label>
+                    <textarea name="listing[description]" placeholder="add description..." class="form-control"></textarea>
+                </div>
+
+                <div class="mb-3">
+                    <label for="title" class="form-label">Image link</label>
+                    <input type="text" placeholder="enter img/url..." name="listing[image]" class="form-control">
+                </div>
+                
+                <div class="row">
+                    <div class="mb-3 col-md-4">
+                        <label for="title" class="form-label">Price</label>
+                        <input type="text" placeholder="add price..." name="listing[price]" class="form-control">
+                    </div>
+
+                     <div class="mb-3 col-md-8">
+                        <label for="title" class="form-label">Country</label>
+                        <input type="text" placeholder="add country..." name="listing[country]" class="form-control">
+                    </div>
+                </div>
+
+                </div>
+                <div class="mb-3 col-md-4">
+                    <label for="title" class="form-label">Location</label>
+                    <input type="text" placeholder="add location..." name="listing[location]" class="form-control">
+                </div>
+
+                <button class="btn btn-dark mb-3">Add</button>
+            </form>
+
+        </div>
+    </div>
+    
 </body>
