Refactor layout structure; enhance body and container styles for improved responsiveness

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,5 +1,6 @@
 <% layout('layouts/boilerplate')  -%>
 <body>
+    <br><br>
     <div class="row">
         <div class="col-lg-8 offset-lg-2">
             <h3>Create New Listing</h3>
@@ -31,16 +32,15 @@
                     </div>
                 </div>
 
-                </div>
-                <div class="mb-3 col-md-4">
+                <div class="mb-3">
                     <label for="title" class="form-label">Location</label>
                     <input type="text" placeholder="add location..." name="listing[location]" class="form-control">
                 </div>
 
                 <button class="btn btn-dark mb-3">Add</button>
             </form>
-
         </div>
     </div>
+    <br><br>
     
 </body>
