--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,11 @@
 body{
     font-family: "Plus Jakarta Sans", sans-serif !important;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.container {
+    flex: 1;
 }
 
 /* Navbar */
