Add new button styling for listing creation; enhance appearance of the 'Add' button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,3 +85,10 @@ body{
 .card-img-overlay:hover {
     opacity: 1;
 }
+
+/* New Input  */
+.add-btn {
+    background-color: #fe424d;
+    border: none;
+    padding: .5rem 1.5rem;
+}
