--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -37,7 +37,7 @@
                     <input type="text" placeholder="add location..." name="listing[location]" class="form-control">
                 </div>
 
-                <button class="btn btn-dark mb-3">Add</button>
+                <button class="btn btn-dark add-btn mb-3">Add</button>
             </form>
         </div>
     </div>
