Refactor form structure in edit and new listing views; enhance input field organization and styling for improved user experience

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -11,29 +11,29 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="title" class="form-label">Description</label>
+                    <label for="description" class="form-label">Description</label>
                     <textarea name="listing[description]" placeholder="add description..." class="form-control"></textarea>
                 </div>
 
                 <div class="mb-3">
-                    <label for="title" class="form-label">Image link</label>
+                    <label for="image" class="form-label">Image link</label>
                     <input type="text" placeholder="enter img/url..." name="listing[image]" class="form-control">
                 </div>
                 
                 <div class="row">
                     <div class="mb-3 col-md-4">
-                        <label for="title" class="form-label">Price</label>
+                        <label for="price" class="form-label">Price</label>
                         <input type="text" placeholder="add price..." name="listing[price]" class="form-control">
                     </div>
 
                      <div class="mb-3 col-md-8">
-                        <label for="title" class="form-label">Country</label>
+                        <label for="country" class="form-label">Country</label>
                         <input type="text" placeholder="add country..." name="listing[country]" class="form-control">
                     </div>
                 </div>
 
                 <div class="mb-3">
-                    <label for="title" class="form-label">Location</label>
+                    <label for="location" class="form-label">Location</label>
                     <input type="text" placeholder="add location..." name="listing[location]" class="form-control">
                 </div>
 
