--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,19 +1,47 @@
 <% layout('layouts/boilerplate')  -%>
 <body>
-    <h3>Update Listing Details...</h3>
+  <div class="row">
+    <div class="col-lg-8">
+      <h3>Update Listing Details...</h3>
+
       <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
-        <input type="text" value="<%= listing.title %>" name="listing[title]">
-        <br><br>
-        <textarea name="listing[description]"><%= listing.description %></textarea>
-        <br><br>
-        <input type="text" value="<%= listing.image %>" name="listing[image]">
-        <br><br>
-        <input type="text" value="<%= listing.price %>" name="listing[price]">
-        <br><br>
-        <input type="text" value="<%= listing.location %>" name="listing[location]">
-        <br><br>
-        <input type="text" value="<%= listing.country %>" name="listing[country]">
-        <br><br>
-        <button>Add</button>
-    </form>
+          <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input type="text" value="<%= listing.title %>" name="listing[title]" class="form-control">
+          </div>
+
+          <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" class="form-control"><%= listing.description %></textarea>
+          </div>
+
+          <div class="mb-3">
+            <label for="image" class="form-label">Image link</label>
+            <input type="text" value="<%= listing.image %>" name="listing[image]" class="form-control">
+          </div>
+                
+          <div class="row">
+              <div class="mb-3 col-md-4">
+                <label for="price" class="form-label">Price</label>
+                <input type="text" value="<%= listing.price %>" name="listing[price]" class="form-control">
+              </div>
+
+              <div class="mb-3 col-md-8">
+                <label for="country" class="form-label">Country</label>
+                <input type="text" value="<%= listing.country %>" name="listing[country]" class="form-control">
+              </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="location" class="form-label">Location</label>
+                    <input type="text" value="<%= listing.location %>" name="listing[location]" class="form-control">
+          </div>
+
+          <button class="btn btn-dark edit-btn mb-3">Edit</button>
+      </form>
+    </div>
+  </div>
+
+
+   
 </body>
