Enhance edit button styling and layout in edit and new listing views; improve spacing and alignment for better user experience

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,3 +92,10 @@ body{
     border: none;
     padding: .5rem 1.5rem;
 }
+
+/* Edit page */
+.edit-btn {
+    background-color: #fe424d;
+    border: none;
+    padding: .5rem 1.5rem;
+}
