--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')  -%>
 <body>
-  <div class="row">
-    <div class="col-lg-8">
+  <div class="row mt-3">
+    <div class="col-lg-8 offset-lg-2">
       <h3>Update Listing Details...</h3>
 
       <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
@@ -37,7 +37,7 @@
                     <input type="text" value="<%= listing.location %>" name="listing[location]" class="form-control">
           </div>
 
-          <button class="btn btn-dark edit-btn mb-3">Edit</button>
+          <button class="btn btn-dark edit-btn mt-1 mb-3">Edit</button>
       </form>
     </div>
   </div>
