--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,7 +1,6 @@
 <% layout('layouts/boilerplate')  -%>
 <body>
-    <br><br>
-    <div class="row">
+    <div class="row mt-3">
         <div class="col-lg-8 offset-lg-2">
             <h3>Create New Listing</h3>
             <form method="POST" action="/listings">
@@ -41,6 +40,4 @@
             </form>
         </div>
     </div>
-    <br><br>
-    
 </body>
