--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,16 +1,27 @@
 <% layout('layouts/boilerplate')  -%>
 <body>
-    <h2>Listing Details</h2>
-    <ul>
-        <li><%=listing.title%></li>
-        <li><%=listing.description%></li>
-        <li>&#8360; <%=listing.price.toLocaleString('en-PK')%></li>
-        <li><%=listing.location%></li>
-        <li><%=listing.country%></li>
-    </ul>
-    <a href="/listings/<%=listing._id%>/edit">Edit listing</a>
-    <form method="POST" action="/listings/<%= listing._id%>?_method=DELETE">
-        <button>Delete Listing</button>
-    </form>
+    <div class="row mt-3">
+        <div class="col-md-8 offset-md-3">
+            <h2>Listing Details</h2>
+        </div>
+            <div class="card col-md-6 offset-md-3">
+                <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="..." style="height:20rem">
+                    <div class="card-body">
+                        <p class="card-text">
+                            <b> <%= listing.title %> </b> <br>
+                            <%=listing.description%> <br>
+                            &#8360; <%=listing.price.toLocaleString('en-PK')%> <br>
+                            <%=listing.location%> <br>
+                            <%=listing.country%>
+                        </p>
+                    </div>
+            </div>
+                
+            <a href="/listings/<%=listing._id%>/edit">Edit listing</a>
+            <form method="POST" action="/listings/<%= listing._id%>?_method=DELETE">
+                <button>Delete Listing</button>
+            </form>
+    </div>
+   
 </body>
 
