Refactor listing views; update image input name for schema alignment, enhance button layout, and improve styling for better user experience

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,27 +1,28 @@
 <% layout('layouts/boilerplate')  -%>
-<body>
     <div class="row mt-3">
         <div class="col-md-8 offset-md-3">
             <h2>Listing Details</h2>
         </div>
-            <div class="card col-md-6 offset-md-3">
-                <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="..." style="height:20rem">
-                    <div class="card-body">
-                        <p class="card-text">
-                            <b> <%= listing.title %> </b> <br>
-                            <%=listing.description%> <br>
-                            &#8360; <%=listing.price.toLocaleString('en-PK')%> <br>
-                            <%=listing.location%> <br>
-                            <%=listing.country%>
-                        </p>
-                    </div>
-            </div>
-                
-            <a href="/listings/<%=listing._id%>/edit">Edit listing</a>
-            <form method="POST" action="/listings/<%= listing._id%>?_method=DELETE">
-                <button>Delete Listing</button>
-            </form>
+        <div class="card col-md-6 offset-md-3 show-card">
+        <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="..." style="height:20rem">
+        <div class="card-body">
+             <p class="card-text">
+                <b> <%= listing.title %> </b> <br>
+                <%=listing.description%> <br>
+                &#8360; <%=listing.price.toLocaleString('en-PK')%> <br>
+                <%=listing.location%> <br>
+                <%=listing.country%>
+            </p>
+        </div>
     </div>
-   
-</body>
+    <div class=" btns mb-3">
+
+        <a href="/listings/<%=listing._id%>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+
+        <form method="POST" action="/listings/<%= listing._id%>?_method=DELETE">
+            <button class="btn btn-dark offset-4">Delete</button>
+        </form>
+
+        </div> 
+    </div>
 
