--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,10 +97,15 @@ body{
 .edit-btn {
     background-color: #fe424d;
     border: none;
-    padding: .5rem 1.5rem;
+    padding: .4rem 1.5rem;
 }
 
 /* Listing details */
 .show-img {
     height: 30vh;
+}
+
+.btns {
+    display: flex;
+    
 }
