--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,5 +1,4 @@
 <% layout('layouts/boilerplate')  -%>
-<body>
   <div class="row mt-3">
     <div class="col-lg-8 offset-lg-2">
       <h3>Update Listing Details...</h3>
@@ -17,7 +16,8 @@
 
           <div class="mb-3">
             <label for="image" class="form-label">Image link</label>
-            <input type="text" value="<%= listing.image %>" name="listing[image]" class="form-control">
+            <!-- store under listing.image.url to match schema -->
+            <input type="text" value="<%= listing.image && listing.image.url ? listing.image.url : '' %>" name="listing[image][url]" class="form-control">
           </div>
                 
           <div class="row">
@@ -41,7 +41,3 @@
       </form>
     </div>
   </div>
-
-
-   
-</body>
