--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,5 +1,4 @@
 <% layout('layouts/boilerplate')  -%>
-<body>
     <div class="row mt-3">
         <div class="col-lg-8 offset-lg-2">
             <h3>Create New Listing</h3>
@@ -16,8 +15,9 @@
 
                 <div class="mb-3">
                     <label for="image" class="form-label">Image link</label>
-                    <input type="text" placeholder="enter img/url..." name="listing[image]" class="form-control">
-                </div>
+                    <!-- name changed to listing[image][url] so req.body.listing.image.url is populated and matches schema -->
+                    <input type="text" placeholder="enter img/url..." name="listing[image][url]" class="form-control">
+                </div>          
                 
                 <div class="row">
                     <div class="mb-3 col-md-4">
@@ -40,4 +40,4 @@
             </form>
         </div>
     </div>
-</body>
+ 
