--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -2,15 +2,15 @@
     <div class="row mt-3">
         <div class="col-lg-8 offset-lg-2">
             <h3>Create New Listing</h3>
-            <form method="POST" action="/listings">
+            <form method="POST" action="/listings" novalidate class="needs-validation">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
-                    <input type="text" placeholder="add title..." name="listing[title]" class="form-control">
+                    <input type="text" placeholder="add title..." name="listing[title]" class="form-control" required>
                 </div>
 
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea name="listing[description]" placeholder="add description..." class="form-control"></textarea>
+                    <textarea name="listing[description]" placeholder="add description..." class="form-control" required></textarea>
                 </div>
 
                 <div class="mb-3">
@@ -22,18 +22,18 @@
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
-                        <input type="text" placeholder="add price..." name="listing[price]" class="form-control">
+                        <input type="text" placeholder="add price..." name="listing[price]" class="form-control" required>
                     </div>
 
                      <div class="mb-3 col-md-8">
                         <label for="country" class="form-label">Country</label>
-                        <input type="text" placeholder="add country..." name="listing[country]" class="form-control">
+                        <input type="text" placeholder="add country..." name="listing[country]" class="form-control" required>
                     </div>
                 </div>
 
                 <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input type="text" placeholder="add location..." name="listing[location]" class="form-control">
+                    <input type="text" placeholder="add location..." name="listing[location]" class="form-control" required>
                 </div>
 
                 <button class="btn btn-dark add-btn mb-3">Add</button>
