--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,35 +5,74 @@
             <form method="POST" action="/listings" novalidate class="needs-validation">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
-                    <input type="text" placeholder="add title..." name="listing[title]" class="form-control" required>
+                    <input 
+                    type="text" 
+                    placeholder="add title..." 
+                    name="listing[title]" 
+                    class="form-control" 
+                    required>
+                    <div class="valid-feedback">looks good!</div>
+                    <div class="invalid-feedback">Please provide a title.</div>
                 </div>
 
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea name="listing[description]" placeholder="add description..." class="form-control" required></textarea>
+                    <textarea 
+                        name="listing[description]" 
+                        placeholder="add description..." 
+                        class="form-control" 
+                        required>
+                    </textarea>
+                    <div class="valid-feedback">looks good!</div>
+                    <div class="invalid-feedback">Please provide a description.</div>
                 </div>
 
                 <div class="mb-3">
                     <label for="image" class="form-label">Image link</label>
                     <!-- name changed to listing[image][url] so req.body.listing.image.url is populated and matches schema -->
-                    <input type="text" placeholder="enter img/url..." name="listing[image][url]" class="form-control">
+                    <input 
+                    type="text"
+                    placeholder="enter img/url..." 
+                    name="listing[image][url]" 
+                    class="form-control">
                 </div>          
                 
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
-                        <input type="text" placeholder="add price..." name="listing[price]" class="form-control" required>
+                        <input 
+                        type="text" 
+                        placeholder="add price..." 
+                        name="listing[price]" 
+                        class="form-control" 
+                        required>
+                        <div class="valid-feedback">looks good!</div>
+                    <div class="invalid-feedback">Please provide a valid price.</div>
                     </div>
 
                      <div class="mb-3 col-md-8">
                         <label for="country" class="form-label">Country</label>
-                        <input type="text" placeholder="add country..." name="listing[country]" class="form-control" required>
+                        <input 
+                        type="text"
+                        placeholder="add country..." 
+                        name="listing[country]" 
+                        class="form-control" 
+                        required>
+                        <div class="valid-feedback">looks good!</div>
+                    <div class="invalid-feedback">Please provide a country.</div>
                     </div>
                 </div>
-
+                
                 <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input type="text" placeholder="add location..." name="listing[location]" class="form-control" required>
+                    <input 
+                    type="text" 
+                    placeholder="add location..." 
+                    name="listing[location]" 
+                    class="form-control" 
+                    required>
+                    <div class="valid-feedback">looks good!</div>
+                    <div class="invalid-feedback">Please provide a location.</div>
                 </div>
 
                 <button class="btn btn-dark add-btn mb-3">Add</button>
