--- a/views/listings/error.ejs
+++ b/views/listings/error.ejs
@@ -1,5 +1,8 @@
 <% layout("/layouts/boilerplate") -%>
 
-<div class="alert alert-danger" role="alert">
-  A simple danger alert—check it out!
+<div class="row mt-3">
+    <div class="alert alert-danger col-6 offset-3" role="alert">
+        <p class="alert-heading"> <%= message %></p>
+      
+    </div>
 </div>
